pane-dash/tests/snapshots/render__help_modal_narrow.snap
---
source: tests/render.rs
expression: "draw(&state, 18, 6)"
---
┌Help────────────┐
│Keys —          │
│navigation and  │
│modes           │
│?, Esc, q close │
└────────────────┘
