pane-dash/tests/snapshots/render__inspect_filter_status_boundaries.snap
---
source: tests/render.rs
expression: "statuses.join(\"\\n\")"
---
N1W1I1E1U1S1P6 grouped INSPECT FILTER: 東 京
N1W1I1E1U1S1P6 grouped INSPECT FILTER: 東 京 é
N1W1I1E1U1S1P6 grouped INSPECT FILTER: 東 京 éq
N1W1I1E1U1S1P6 grouped INSPECT FILTER: 東 京 équ
