pane-dash/tests/snapshots/render__inspect_navigation_status_boundaries.snap
---
source: tests/render.rs
expression: "statuses.join(\"\\n\")"
---
N1W1I1E1U1S1P6 grouped N INSPECT filter: 東
N1W1I1E1U1S1P6 grouped N INSPECT filter: 東
N1W1I1E1U1S1P6 grouped N INSPECT filter: 東 京
N1W1I1E1U1S1P6 grouped N INSPECT filter: 東 京 é
