pane-dash/tests/snapshots/render__kill_modal_narrow.snap
---
source: tests/render.rs
expression: "draw(&state, 18, 6)"
---
┌Kill pane %42?──┐
│                │
│                │
│                │
└────────────────┘
W1P1 grouped NAV
