pane-dash/tests/snapshots/render__preview_follow_bottom.snap
---
source: tests/render.rs
expression: followed
---
▾ dash (1)                                                             1 working
  ◐ working      2m    1.2  tmp          sonnet  Task








────────────────────────────────────────────────────────────────────────────────
line-08
line-09
line-10
line-11
line-12
line-13
line-14
line-15
line-16
line-17
line-18
line-19
working 1  1 panes  grouped | NAV
