pane-dash/tests/snapshots/render__preview_hints.snap
---
source: tests/render.rs
expression: "draw(&waiting, 80, 24)"
---
▾ dash (1)                                                             1 working
  ◐ working      2m    1.2  tmp          sonnet  Task








────────────────────────────────────────────────────────────────────────────────
preview unavailable: pane vanished











working 1  1 panes  grouped | NAV
