pane-dash/tests/snapshots/render__preview_inspect_scroll.snap
---
source: tests/render.rs
expression: scrolled
---
▾ dash (1)                                                             1 working
  ◐ working      2m    1.2  tmp          sonnet  Task








────────────────────────────────────────────────────────────────────────────────
line-05
line-06
line-07
line-08
line-09
line-10
line-11
line-12
line-13
line-14
line-15
line-16
working 1  1 panes  grouped | NAV | INSPECT
