pane-dash/tests/snapshots/render__preview_styled_wide_clipped.snap
---
source: tests/render.rs
expression: "draw(&state, 100, 8)"
---
▾ dash (1)                          1 working│東 京 éabcdefgh
  ◐ working      2m    1.2  tmp          sonn│
                                             │
                                             │
                                             │
                                             │
                                             │
working 1  1 panes  grouped | NAV
